# very-simple-raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.h  colour.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  simple_raytracer.h  sphere.h  vec3.h
src/: CMakeLists.txt  ppm_writer.cpp
utils/: ppm_writer.cpp
